--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
     tools:context=".feature.login.LoginFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/loginToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_700"
@@ -189,7 +189,7 @@
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:layout_width="31dp"
+                        android:layout_width="36dp"
                         android:layout_height="wrap_content"
                         android:hapticFeedbackEnabled="true" />
 
@@ -236,7 +236,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hapticFeedbackEnabled="true"
-                android:text="REGISTER"></Button>
+                android:text="REGISTER"
+                ></Button>
 
         </LinearLayout>
 
